# project-tui

./: .gitignore  Cargo.toml  README.md
.claude/: settings.local.json
.devcontainer/: Dockerfile  devcontainer.json
src/: error.rs  lib.rs  main.rs
src/app/: event.rs  state.rs
src/config/: settings.rs
src/github/: auth.rs  client.rs  mod.rs  models.rs
src/github/queries/: mod.rs
src/ui/: mod.rs  project_selector.rs  router.rs  ticket_detail.rs  ticket_list.rs
src/ui/components/: input.rs  mod.rs  modal.rs  table.rs
