[package]
name = "project-tui"
version = "0.1.0"
edition = "2021"

[dependencies]
# Pin idna to avoid idna_adapter / ICU4X compilation issues in devcontainer
idna = "=1.0.3"

# TUI
ratatui = "0.28"
crossterm = "0.28"

# Async runtime
tokio = { version = "1.40", features = ["full"] }

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Utils
directories = "5.0"

[dev-dependencies]
tokio-test = "0.4"
